minor fix to white space bounce while scrolling vertically

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -25,16 +25,19 @@
     --bg-dots: var(--violet-11);
 }
 
-html,body{
+html {
+    overflow: hidden;
     height: 100%;
 }
 
 body {
+    height: 100%;
     animation: moveBackground 100s infinite linear;
     background-image:  radial-gradient(var(--bg-dots) 1.15px, transparent 1.15px), radial-gradient(var(--bg-dots) 1.15px, var(--bg-dark-1) 1.15px);
     background-size: 46px 46px; 
     background-attachment: fixed; 
     opacity: 1;
+    overflow: auto;
 }
 h1 {
     font-size: 2rem;
